maze.lessons.maze.island.IslandMaze.scala.error
Escaper:31: error: Unit does not take parameters
	trouveNord();
                  ^